show property binding in demo

--- a/demo/templates/master.html
+++ b/demo/templates/master.html
@@ -1,5 +1,5 @@
 <template>
   <template-yield template="[[header]]"></template-yield>
-  <template-yield template="[[page]]" stuff="[[stuff]]"></template-yield>
+  <template-yield template="[[page]]" text="[[text]]"></template-yield>
   <template-yield template="[[footer]]"></template-yield>
 </template>
