--- a/demo/templates/master.html
+++ b/demo/templates/master.html
@@ -1,5 +1,5 @@
 <template>
-  <template-yield template="[[header]]"></template-yield>
+  <template-yield from="header"></template-yield>
   <template-yield template="[[page]]" from="[[pageName]]" text="[[text]]"></template-yield>
-  <template-yield template="[[footer]]"></template-yield>
+  <template-yield from="footer"></template-yield>
 </template>
